# model-registry-project

./: .gitignore  README.md  obproject.toml  project_spec.json  pyproject.toml
.claude/agents/: ds-strategist.md  lifecycle-runner.md  ui-improver.md
.github/workflows/: deploy.yml
configs/: evaluation.json  model.json  model_aggressive.json  model_conservative.json  model_lof.json  training.json
data/evaluation_results/: asset_config.toml
data/market_snapshot/: asset_config.toml
deployments/: __init__.py
deployments/api/: __init__.py  app.py  config.yml
deployments/dashboard/: __init__.py  app.py  config.yml
deployments/dashboard/static/: .gitkeep  dancing-logo.lottie
deployments/dashboard/templates/: base.html  cards.html  data.html  models.html  overview.html
flows/build_dataset/: flow.py
flows/evaluate/: flow.py
flows/ingest/: flow.py
flows/promote/: flow.py
flows/train/: flow.py
flows/validate_outcomes/: flow.py
models/anomaly_detector/: asset_config.toml
scripts/: inspect_datasets.py  validate_dashboard.py
src/: __init__.py  cards.py  data.py  eval.py  features.py  model.py  predictions.py  registry.py  storage.py
