[project]
name = "crypto-anomaly-detection"
version = "0.1.0"
description = "Real-time anomaly detection on live cryptocurrency market data"
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    "outerbounds",
    "scikit-learn",
    "pandas",
    "numpy",
    "pyarrow",
    "requests",
    "fastapi",
    "uvicorn",
    "gunicorn",
    "jinja2",
    "aiofiles",
    "python-multipart",
]
